[package]
name = "proof-of-kill"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
failure = "0.1.8"
clap = "2.33.3"
rand = "0.8.4"
data-encoding = "2.3.2"
ring = "0.16.20"
rand_core = "0.6.3"
rand_seeder = "0.2.2"
rand_pcg = "0.3.1"
sled = "0.34.6"
serde = {"version" = "1.0", features =["derive"]}
log = "0.4.14"
bitcoincash-addr = "0.5.2"
rust-crypto = "0.2.36"
bincode = "1.3.3"